// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/boardSettingsPage/QuickActionConditionBuilder should match snapshot with conditions 1`] = `
<div>
  <div
    class="QuickActionConditionBuilder"
  >
    <div
      class="QuickActionConditionRow"
    >
      <button
        class="Button QuickActionConditionRow__remove-btn"
        type="button"
      >
        <span>
          [-]
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button QuickActionConditionRow__property-select"
          type="button"
        >
          <span>
            Select property
          </span>
        </button>
      </div>
    </div>
    <div
      class="QuickActionConditionRow"
    >
      <button
        class="Button QuickActionConditionRow__remove-btn"
        type="button"
      >
        <span>
          [-]
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button QuickActionConditionRow__property-select"
          type="button"
        >
          <span>
            Select property
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button"
      type="button"
    >
      <span>
        + Add Condition
      </span>
    </button>
  </div>
</div>
`;

exports[`pages/boardSettingsPage/QuickActionConditionBuilder should match snapshot with empty conditions 1`] = `
<div>
  <div
    class="QuickActionConditionBuilder"
  >
    <p
      class="QuickActionConditionBuilder__empty"
    >
      No conditions. This action will always be visible.
    </p>
    <button
      class="Button"
      type="button"
    >
      <span>
        + Add Condition
      </span>
    </button>
  </div>
</div>
`;

exports[`pages/boardSettingsPage/QuickActionConditionBuilder should match snapshot with single condition 1`] = `
<div>
  <div
    class="QuickActionConditionBuilder"
  >
    <div
      class="QuickActionConditionRow"
    >
      <button
        class="Button QuickActionConditionRow__remove-btn"
        type="button"
      >
        <span>
          [-]
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button QuickActionConditionRow__property-select"
          type="button"
        >
          <span>
            Select property
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button"
      type="button"
    >
      <span>
        + Add Condition
      </span>
    </button>
  </div>
</div>
`;
